fixed hero responsiveness on mobile

--- a/src/assets/css/Products.module.css
+++ b/src/assets/css/Products.module.css
@@ -258,9 +258,10 @@
 @media (max-width: 640px) {
     .hero {
         padding: 40px 20px;
-        height: 80vh;
+        height: 50vh;
         flex-direction: column;
         align-items: center;
+        justify-content: flex-start;
     }
 
     .hero .content {
@@ -269,8 +270,8 @@
     }
 
     .hero img {
-        width: 55%;
-        height: 35%;
+        width: 75%;
+        height: 58%;
     }
 
     .hero .content h1 {
